// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Decorator renders correctly 1`] = `
<Link
  className="security--decorator security--decorator--low security--decorator--link"
  href="#"
  tabIndex={0}
>
  <span
    className="security--decorator__icon"
  >
    <Icon
      className=""
      fillRule="evenodd"
      height={null}
      path="M 8.00,3.00
           C 8.00,3.00 14.00,12.00 14.00,12.00
             14.00,12.00 2.00,12.00 2.00,12.00
             2.00,12.00 8.00,3.00 8.00,3.00 Z"
      renderIcon={null}
      size={16}
      viewBox="0 0 16 16"
      width={null}
    />
  </span>
  <span
    className="security--decorator__type"
  >
    IP
  </span>
  <span
    className="security--decorator__value"
    title=""
  >
    10.0.0.0
  </span>
</Link>
`;

exports[`Decorator renders the \`inert\` variation 1`] = `
<Link
  className="security--decorator security--decorator--low security--decorator--link security--decorator--inert"
  href="#"
  tabIndex={0}
>
  <span
    className="security--decorator__icon"
  >
    <Icon
      className=""
      fillRule="evenodd"
      height={null}
      path="M 8.00,3.00
           C 8.00,3.00 14.00,12.00 14.00,12.00
             14.00,12.00 2.00,12.00 2.00,12.00
             2.00,12.00 8.00,3.00 8.00,3.00 Z"
      renderIcon={null}
      size={16}
      viewBox="0 0 16 16"
      width={null}
    />
  </span>
  <span
    className="security--decorator__type"
  >
    IP
  </span>
  <span
    className="security--decorator__value"
    title=""
  >
    10.0.0.0
  </span>
</Link>
`;

exports[`Decorator renders the HTML of the node's subtree 1`] = `
<a
  class="bx--link security--decorator security--decorator--low security--decorator--link"
  href="#"
  tabindex="0"
>
  <span
    class="security--decorator__icon"
  >
    <svg
      aria-hidden="true"
      class="security--icon"
      fill-rule="evenodd"
      focusable="false"
      height="16"
      preserveAspectRatio="xMidYMid meet"
      style="will-change:transform"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M 8.00,3.00
           C 8.00,3.00 14.00,12.00 14.00,12.00
             14.00,12.00 2.00,12.00 2.00,12.00
             2.00,12.00 8.00,3.00 8.00,3.00 Z"
      />
    </svg>
  </span>
  <span
    class="security--decorator__type"
  >
    IP
  </span>
  <span
    class="security--decorator__value"
    title=""
  >
    10.0.0.0
  </span>
</a>
`;
